<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog"

    android:padding="@dimen/_5sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="@dimen/_270sdp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="DELIVERY GUIDELINES"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                tools:ignore="HardcodedText" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:text="@string/guidelines7"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/transparent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="right"
            android:fontFamily="@font/ubuntu_regular"
            android:text="Ok"
            android:textColor="@color/white"
            tools:ignore="HardcodedText,RtlHardcoded" />
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.core.widget.NestedScrollView>