<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:context=".AuthFragments.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/cupang" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leckerlione_regular"
            android:text="@string/hello_there_welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_30ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutEmailSignIn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:counterTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutPasswordSignIn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:counterTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPasswordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chkRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/white"
                android:id="@+id/btnLogin"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/white"
                android:id="@+id/btnGoToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/new_user_sign_up" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
